compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@extern_call_basic.tapir.snap
---
source: compiler/src/compile.rs
expression: decompiled
input_file: compiler/src/snapshot_tests/compiler/extern_call_basic.tapir
---
00000000: stackalloc 4
00000001: extern call 0, 3
00000002: mov 1, 3
00000003: mov 2, 1
00000004: wait
00000005: ret
00000006: ret
