compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@extern_call_multiple_externs.tapir.snap
---
source: crates/tapir-script/compiler/src/compile.rs
expression: decompiled
input_file: crates/tapir-script/compiler/src/snapshot_tests/compiler/extern_call_multiple_externs.tapir
---
00000000: extern call 0, 5
00000001: mov 1, 5
00000002: mov 4, 1
00000003: extern call 1, 5
00000004: mov 3, 5
00000005: mov 1, 3
00000006: mov 3, 4
00000007: mov 4, 1
00000008: mov 5, 3
00000009: mov 6, 4
00000010: extern call 2, 5
00000011: mov 1, 5
00000012: mov 2, 1
00000013: wait
00000014: ret
00000015: ret
