compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@extern_call_statement.tapir.snap
---
source: crates/tapir-script/compiler/src/compile.rs
expression: decompiled
input_file: crates/tapir-script/compiler/src/snapshot_tests/compiler/extern_call_statement.tapir
---
00000000: loadk 1, 42
00000002: mov 3, 1
00000003: extern call 0, 2
00000004: wait
00000005: ret
00000006: ret
