compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@extern_call_with_args.tapir.snap
---
source: crates/tapir-script/compiler/src/compile.rs
expression: decompiled
input_file: crates/tapir-script/compiler/src/snapshot_tests/compiler/extern_call_with_args.tapir
---
00000000: loadk 3, 3
00000002: loadk 4, 5
00000004: mov 5, 3
00000005: mov 6, 4
00000006: extern call 0, 5
00000007: mov 1, 5
00000008: mov 2, 1
00000009: wait
00000010: ret
00000011: ret
