compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@factorial_recursive.tapir.snap
---
source: crates/tapir-script/compiler/src/compile.rs
expression: decompiled
input_file: crates/tapir-script/compiler/src/snapshot_tests/compiler/factorial_recursive.tapir
---
00000000: loadk 2, 10
00000002: mov 4, 2
00000003: call 3
00000004: jmp 9
00000005: mov 1, 4
00000006: wait
00000007: ret
00000008: ret
00000009: mov 4, 1
00000010: loadk 5, 0
00000012: eq 3, 4, 5
00000013: jumpif 3
00000014: jmp 16
00000015: jmp 20
00000016: loadk 6, 1
00000018: mov 1, 6
00000019: ret
00000020: jmp 21
00000021: mov 8, 1
00000022: loadk 9, 1
00000024: eq 7, 8, 9
00000025: jumpif 7
00000026: jmp 28
00000027: jmp 32
00000028: loadk 10, 1
00000030: mov 1, 10
00000031: ret
00000032: jmp 33
00000033: wait
00000034: mov 12, 1
00000035: mov 15, 1
00000036: loadk 16, 1
00000038: sub 14, 15, 16
00000039: mov 18, 14
00000040: call 17
00000041: jmp 9
00000042: mov 13, 18
00000043: mul 11, 12, 13
00000044: mov 1, 11
00000045: ret
