compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@fix_mul_div_promotion.tapir.snap
---
source: crates/tapir-script/compiler/src/compile.rs
expression: decompiled
input_file: crates/tapir-script/compiler/src/snapshot_tests/compiler/fix_mul_div_promotion.tapir
---
00000000: push8	5
00000001: dup	0
00000002: push8	12
00000003: fmul
00000004: drop	2
00000005: ret	args=0 rets=0 shift=0
