compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@fn_call_one_return.tapir.snap
---
source: crates/tapir-script/compiler/src/compile.rs
expression: decompiled
input_file: crates/tapir-script/compiler/src/snapshot_tests/compiler/fn_call_one_return.tapir
---
00000000: loadk 1, 3
00000002: mov 3, 1
00000003: mov 5, 3
00000004: call 4
00000005: jmp 9
00000006: mov 2, 5
00000007: ret
00000008: ret
00000009: mov 4, 1
00000010: loadk 5, 3
00000012: add 3, 4, 5
00000013: mov 1, 3
00000014: ret
