compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@globals.tapir.snap
---
source: compiler/src/compile.rs
expression: decompiled
input_file: compiler/src/snapshot_tests/compiler/globals.tapir
---
00000000: getglobal 2, 0
00000001: loadk 3, 1
00000003: add 1, 2, 3
00000004: setglobal 1, 0
00000005: getglobal 1, 0
00000006: setprop 1, 0
00000007: wait
00000008: getglobal 2, 0
00000009: loadk 3, 1
00000011: add 1, 2, 3
00000012: setglobal 1, 0
00000013: getglobal 1, 0
00000014: setprop 1, 0
00000015: ret
00000016: ret
