compiler/src/snapshots/compiler__compile__test__compiler_snapshot_tests@globals_immediate.tapir.snap
---
source: compiler/src/compile.rs
expression: decompiled
input_file: compiler/src/snapshot_tests/compiler/globals_immediate.tapir
---
00000000: setglobali 42, 0
00000001: getglobal 1, 0
00000002: setprop 1, 0
00000003: wait
00000004: getglobal 2, 0
00000005: addi 1, 2, 1
00000006: setglobal 1, 0
00000007: getglobal 1, 0
00000008: setprop 1, 0
00000009: ret
00000010: ret
